--- a/lib/DatePicker/DatePicker.module.scss
+++ b/lib/DatePicker/DatePicker.module.scss
@@ -112,7 +112,7 @@
 
   &.active {
     .date-picker-entry {
-      border-bottom: 1px solid var(--color-primary-dark);
+      border-bottom: 1px solid var(--date-picker-color-primary-dark);
     }
   }
 }
